# ITMOGamedev2022-Algos-Lab1Hammurabi

./: .gitignore  CMakeLists.txt  Lab1Hammurabi.sln  README.md
Lab1Hammurabi/: City.cpp  City.h  HammurabiConfig.h  Lab1Hammurabi.cpp  Lab1Hammurabi.vcxproj  Lab1Hammurabi.vcxproj.filters  MainLab1Hammurabi.cpp  save.txt
Lab1Hammurabi/Debug/: Lab1Hammurabi.exe.recipe  Lab1Hammurabi.ilk  vc142.idb
Lab1Hammurabi/Debug/Lab1Hammurabi.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lab1Hammurabi.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lab1Hammurabi/GameSaving/: GameSave.cpp  GameSave.h
Lab1Hammurabi/Loggers/: BeautyGameLogger.cpp  BeautyGameLogger.h  IGameLogger.cpp  IGameLogger.h  TestGameLogger.cpp  TestGameLogger.h
Lab1Hammurabi/Misc/: IntMinMax.h
Lab1Hammurabi/PlayerGameInput/: RoundCityManagement.cpp  RoundCityManagement.h
Lab1Hammurabi/Round/: Round.h  RoundResultEnum.h  RoundSharedInfo.h
Lab1Hammurabi/RoundActions/: ActionResult.h  ActionResultBuilder.cpp  ActionResultBuilder.h  CitizenIncome.cpp  CitizenIncome.h  CitizenWheatConsumptionAction.cpp  CitizenWheatConsumptionAction.h  IRoundAction.cpp  IRoundAction.h  PlaqueAction.cpp  PlaqueAction.h  RatsAction.cpp  RatsAction.h  WheatIncomeAction.cpp  WheatIncomeAction.h
Lab1Hammurabi/Statistics/: Statistic.cpp  Statistic.h
Lab1Hammurabi/x64/Debug/: Lab1Hammurabi.exe.recipe  Lab1Hammurabi.ilk  vc142.idb  vc143.idb
Lab1Hammurabi/x64/Debug/Lab1Hammurabi.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lab1Hammurabi.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
